[package]
name = "reversal_terminator"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
url = "2"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rsa = { version = "0.9", features = ["pem", "sha2"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
